# advent_of_code_template

./: Cargo.toml  LICENSE  README.md
benches/: solutions_bench.rs
src/: lib.rs
src/utils/: grid.rs  math.rs  mod.rs  parsing.rs  range.rs  strings.rs
